fix(style): fix broken styles of external links

--- a/_sass/markdown.scss
+++ b/_sass/markdown.scss
@@ -87,7 +87,8 @@
 
   a {
     &::after {
-      padding-left: 5px;
+      display: inline-block;
+      padding-left: 2.5px;
       content: '⇗';
       font-size: 70%;
       vertical-align: super;
@@ -268,9 +269,10 @@
     font-weight: bold;
 
     &::before {
+      display: inline-block;
       position: relative;
-      content: '§';
       padding-right: 0.5rem;
+      content: '§';
     }
   }
 }
